package modelos;

public interface ICalculable {
	int DESCUENTO = 15;
	int TOPE = 1500;

	public double calc_precio();
}
