/**
 * @file Tratamientos.java
 * @author iberlot <@> ivanberlot@gmail.com
 * @todo 10 mar. 2019
 * @version 0.1 - Version de inicio
 */

/*
 * Querido programador:
 *
 * Cuando escribi este codigo, solo Dios y yo sabiamos como funcionaba.
 * Ahora, Solo Dios lo sabe!!!
 *
 * Asi que, si esta tratando de 'optimizar' esta rutina y fracasa (seguramente),
 * por favor, incremente el siguiente contador como una advertencia para el
 * siguiente colega:
 *
 * totalHorasPerdidasAqui = 1
 *
 */

package nuctriClin;

import java.util.ArrayList;

/**
 * @author IVANB
 *
 */
public abstract class Tratamientos implements ICalculable {
	protected int numero;
	protected String nombre;
	protected ArrayList<Productos> productos = new ArrayList<Productos>();

	/**
	 * 
	 */
	public Tratamientos() {
		super();
	}

	/**
	 * @param numero
	 * @param nombre
	 */
	public Tratamientos(int numero, String nombre) {
		super();
		this.numero = numero;
		this.nombre = nombre;
	}

	/*
	 * (non-Javadoc)
	 * 
	 * @see java.lang.Object#toString()
	 */
	@Override
	public String toString() {
		return "Tratamientos [numero=" + numero + ", nombre=" + nombre + "]";
	}

	/**
	 * @return the numero
	 */
	public int getNumero() {
		return numero;
	}

	/**
	 * @param numero the numero to set
	 */
	public void setNumero(int numero) {
		this.numero = numero;
	}

	/**
	 * @return the nombre
	 */
	public String getNombre() {
		return nombre;
	}

	/**
	 * @param nombre the nombre to set
	 */
	public void setNombre(String nombre) {
		this.nombre = nombre;
	}

	/**
	 * @return El valor de productos
	 */
	public ArrayList<Productos> getProductos() {
		return productos;
	}

	/**
	 * @param productos para cargar en productos
	 */
	public void setProductos(ArrayList<Productos> productos) {
		this.productos = productos;
	}

}
